Revision history for App-Pocoirc

{{$NEXT}}

0.21  Mon Sep 27 03:46:03 GMT 2010
    - Make --no-color actually work (and use -b for the short option)

0.20  Sun Sep 26 03:49:11 GMT 2010
    - Depend on POE::Component::Client::DNS and use the same resolver object
      for all IRC components

0.19  Sun Sep 26 02:54:11 GMT 2010
    - On shutdown, wait up to 5 seconds for IRC servers to disconnect after
      we quit
    - On shutdown, forcefully disconnect from servers to which we are
      connected but not logged in
    - Don't log more than one "Exiting" message after shutdown is initiated
    - Fixed a small error in the usage message
    - Tabulate the log messages a bit for easier reading

0.18  Sat Sep 25 21:31:33 GMT 2010
    - Add -t/--trace option to trace events
    - Fix compilation test for the pocoirc script
    - Move -P/--plugin to -L/--plugin
    - Move -p/--password to -P/--password
    - Add -p/--port to specify the server port
    - Log our process id on startup

0.17  Sat Sep 25 09:42:36 UTC 2010
    - Move -p/--plugin to -P/--plugin
    - Add -p/--password for specifying a server password
    - Add -N/--nspassword to specify a NickServ password
    - Add -a/--arg to specify arbitrary arguments to POE::Component::IRC
    - Log when we identify with NickServ

0.16  Sat Sep 4 02:18:19 UTC 2010
    - Add a -j/--join option to join channels with the AutoJoin plugin

0.15  Tue Aug 17 22:33:32 GMT 2010
    - Terminate gracefully when we get SIGTERM
    - Make all warnings fatal

0.14  Mon Aug 2 07:46:04 GMT 2010
    - Enable USE_SIGCHLD in POE for instant child process reaping. Might make
      a difference with bots that use a lot of fork()ing plugins.
    - Fix a bug which caused -V/--version to not print the version
    - Color plugin errors red like other errors

0.13  Mon Jul 26 03:54:30 GMT 2010
    - Shutdown properly when connected to a server which we've failed to log
      into. Depend on POE::Component::IRC 6.36 for this.