@@ -1,6 +1,7 @@
 Revision history for App-Pocoirc
 
 {{$NEXT}}
+    - Remove some erroneous docs from the App::Pocoirc::Status Pod.
 
 0.21  Mon Sep 27 03:46:03 GMT 2010
     - Make --no-color actually work (and use -b for the short option)
